--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,89 @@ h1 {
 .form {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 0 1.25em;
 }
 
 .form__heading, .form__action {
     grid-column: 1 / 3;
+}
+
+/* Form Heading */
+.form__heading {
+    margin-bottom: 2.5em;
+}
+
+.form__title {
+    color: var(--deep-blue);
+    font-size: 2.875em;
+    margin-bottom: 0.625rem;
+}
+
+.form__legend {
+    font-size: 14px;
+    color: var(--blue-gray);
+}
+
+/* Form inputs */
+.form__section {
+    margin-bottom: 1.25em;
+}
+
+.form__label {
+    display: inline-block;
+    margin-bottom: 0.3125rem;
+    font-size: 0.875em;
+    font-weight: 600;
+    color: var(--deep-blue);
+}
+
+.form__input {
+    position: relative;
+}
+
+.form__control {
+    padding: 0.5rem 2.5rem 0.5rem 0.9375rem;
+    font-size: 0.875em;
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 0.3125rem;
+    color: var(--blue-gray);
+    transition: .2s all ease;
+}
+
+.form__control:focus {
+    border-color: var(--blue);
+}
+
+.form__input .bx {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 1.375em;
+}
+
+.form__input .bx.bx-check {
+    display: none;
+    color: var(--green);
+}
+
+.form__input .bx.bx-x {
+    display: none;
+    color: var(--red);
+}
+
+.form__input.check .bx.bx-check {
+    display: inline;
+}
+
+.form__input.check .form__control {
+    border-color: var(--green);
+}
+
+.form__input.error .bx.bx-x {
+    display: inline;
+}
+
+.form__input.error .form__control {
+    border-color: var(--red);
 }
