--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 :root {
-    --bg-color: ;
+    --white: #ffffff;
     --deep-blue: #231955;
     --blue-gray: #495C83;
     --red: #f44336;
@@ -26,7 +26,6 @@ body {
     width: 60%;
     height: 100vh;
     margin: auto;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +44,7 @@ h1 {
     gap: 0 1.25em;
 }
 
-.form__heading, .form__action {
+.form__heading, .form__actions {
     grid-column: 1 / 3;
 }
 
@@ -127,4 +126,87 @@ h1 {
 
 .form__input.error .form__control {
     border-color: var(--red);
+}
+
+.form__actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form__legend {
+    color: var(--blue-gray);
+}
+
+.form__legend > a {
+    font-weight: 600;
+    color: var(--deep-blue);
+    text-decoration: none;
+}
+
+.form__button {
+    padding: 0.625rem 0.9375rem;
+    font-size: 0.875em;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #fff;
+    background: var(--blue);
+    cursor: pointer;
+    transition: .1s all ease;
+}
+
+.form__button:hover {
+    background: #1e88e5;
+}
+
+.form__button:active {
+    outline: auto;
+    outline-width: 4px;
+    outline-color: #64b5f6;
+}
+
+/* Responsive Design */
+@media (max-width: 640px) {
+
+    .container {
+        height: auto;
+        margin: 2.5em auto;
+    }
+
+    .form {
+        grid-template-columns: 1fr;
+    }
+
+    .form__heading, .form__actions {
+        grid-column: unset;
+    }
+
+    .form__heading {
+        text-align: center;
+    }
+
+    .form__control {
+        width: 100%;
+    }
+}
+
+@media (max-width: 425px) {
+
+    body {
+        font-size: 14px;
+    }
+
+    .container {
+        width: 80%;
+    }
+
+    .form__actions {
+        flex-direction: column-reverse;
+    }
+
+    .form__button {
+        margin-bottom: 0.625em;
+    }
 }
